Fixing spacing for headings and paragraphs.

--- a/ui.apps/src/main/resources/jcr_root/etc/slick/designs/slick/scss/_base.scss
+++ b/ui.apps/src/main/resources/jcr_root/etc/slick/designs/slick/scss/_base.scss
@@ -13,7 +13,11 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
-    margin: 0;
+    margin: 0 0 16px;
+}
+
+p {
+    margin: 0 0 16px;
 }
 
 a {
